--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lodash.omitby": "^4.5.0",
     "lodash.range": "^3.2.0",
     "object-values": "^1.0.0",
-    "object.entries": "^1.0.3"
+    "object.entries": "^1.0.3",
+    "yarn": "^0.24.5"
   },
   "peerDependencies": {
     "enzyme": "^2.7.1"
